About us card spacing fixed

--- a/styles/about.css
+++ b/styles/about.css
@@ -288,7 +288,7 @@
   }
 
   .reviews__card {
-    width: 30%;
+    width: 28%;
   }
 
   .arrow-btn {
